Update backend Dockerfile to busybox

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,2 +1,2 @@
-FROM scratch
-CMD ["echo", "Backend built successfully"]
+FROM busybox
+CMD ["sh", "-c", "while true; do echo Backend Running; sleep 5; done"]
